@@ -1,3 +1,7 @@
+2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* timezone.el (timezone-parse-date): Import from Emacs-20.7.
+
 2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* emu.el (char-category for XEmacs): Don't use `int-char' when the
@@ -30,10 +34,10 @@
 
 	*  APEL: Version 10.3 released.
 	* apel-ver.el (apel-ver): Change APEL version to 10.3.
-	
+
 	* Makefile : Apply patch from TAKAHASHI Kaoru <kaoru@se.uec.ac.jp>
 	of Message-Id: <86vgs2s3cp.wl@tomoko.nantnaq.kaisei.org>.
- 
+
 2000-12-28  Tanaka Akira      <akr@m17n.org>
 
 	* pccl-20.el (ccl-compat): new advice for `make-coding-system' of
